tests/passes/simplify-with-control/comb-with-static.expect
---CODE---
1
---STDERR---
Error: tests/passes/simplify-with-control/comb-with-static.futil
3 |component main(@go @static go: 1, in: 32) -> (@done done: 1) {
  |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass `simplify-with-control` assumption violated: Component main has both a top-level "static" annotations and combinational groups which is not supported
